[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/UI/voicebox.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/namebox.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/facebox.png" type="Texture" id=4]
[ext_resource path="res://scenes/Dialog/DialoguePlayer.gd" type="Script" id=5]
[ext_resource path="res://assets/Texture/NPC1_SpeakDown.png" type="Texture" id=6]
[ext_resource path="res://assets/Texture/NPC1_SpeakUp.png" type="Texture" id=7]
[ext_resource path="res://assets/textFont.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/textFontBorderless.tres" type="DynamicFont" id=9]

[sub_resource type="AnimatedTexture" id=1]
frames = 2
frame_0/texture = ExtResource( 6 )
frame_1/texture = ExtResource( 7 )
frame_1/delay_sec = 0.0

[node name="Dialog_Holder" type="Node"]
script = ExtResource( 5 )

[node name="Dialog_Box" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_top = -57.0
margin_right = 36.0
margin_bottom = -57.0

[node name="VoiceBox" type="NinePatchRect" parent="Dialog_Box"]
margin_top = -1.0
margin_right = 142.0
margin_bottom = 34.0
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="Dialog_Box/VoiceBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -3.0
margin_bottom = 6.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Dialog_Box/VoiceBox/MarginContainer"]
visible = false
margin_right = 135.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.247059, 0.156863, 0.196078, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Label_Text"
autowrap = true

[node name="FaceBox" type="NinePatchRect" parent="Dialog_Box/VoiceBox"]
margin_left = -30.0
margin_top = 23.0
margin_right = -1.0
margin_bottom = 52.0
texture = ExtResource( 4 )
patch_margin_left = 12
patch_margin_top = 13
patch_margin_right = 12
patch_margin_bottom = 13

[node name="Portrait" type="TextureRect" parent="Dialog_Box/VoiceBox/FaceBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.5
margin_top = -12.5
margin_right = 12.5
margin_bottom = 12.5
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
stretch_mode = 6

[node name="NameBox" type="NinePatchRect" parent="Dialog_Box/VoiceBox"]
margin_left = -1.0
margin_top = 36.0
margin_right = 70.0
margin_bottom = 52.0
texture = ExtResource( 3 )
patch_margin_left = 20
patch_margin_top = 6
patch_margin_right = 20
patch_margin_bottom = 6

[node name="Name" type="Label" parent="Dialog_Box/VoiceBox/NameBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = -2.0
margin_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 8 )
text = "Helpful Stranger"
clip_text = true
